Task 6 first try